@@ -8,6 +8,8 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2019-] added data structure TMCG_Bigint
+* [2019-08-25] RFC4880: added tmcg_openpgp_multiple_octets_t and changed members
+               from TMCG_OpenPGP_Signature (i.e. embeddedsigs and recipientfprs)
 * [2019-08-15] RBC: added out-of-order handler to retrieve missing messages
 * [2019-08-13] RBC: added member fifo_skip and a mechanism to skip FIFO-ordering
 * [2019-08-12] RBC: added member ID_log to trace the history of ID operations
